--- a/Course.html
+++ b/Course.html
@@ -200,7 +200,7 @@
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i>CERTIFIED MANAGEMENT ACCOUNTANT (INDIA)</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>Prospire's CMA India course focuses on building competence in students. The CMA certification, globally recognized for management accountants and financial professionals, sets the standard. This course provides specialized training in specific fields, preparing individuals for successful careers...</p>
                     <div class="mt-10">
@@ -224,7 +224,7 @@
                      </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> ENROLLED AGENT</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>The Enrolled Agent (EA) designation, provided by Prospire, is a prestigious qualification for U.S. tax professionals. EAs are IRS-authorized experts who represent individuals, businesses, and organizations in tax matters. This credential signifies top-tier expertise in tax law, making it a valuable asset for those in need of tax-related services.</p>
                     <div class="mt-10">
@@ -248,7 +248,7 @@
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i>CERTIFIED GST VAT ACCOUNTANT</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>The Certified GST VAT Accountant certification from Prospire is designed for professionals specializing in Goods and Services Tax (GST) and Value Added Tax (VAT). In many countries, GST and VAT are critical components of the tax system. This certification equips individuals with the expertise to manage compliance, calculations, and reporting related to these taxes. Certified GST VAT Accountants are experts in these tax systems, offering valuable support to businesses in navigating complex tax regulations and ensuring compliance...</p>
                     <div class="mt-10">
@@ -272,7 +272,7 @@
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i>CERTIFIED ACCA IFRS ACCOUNTANT</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>The Certified ACCA IFRS Accountant program, provided by Prospire, is tailored for finance professionals seeking expertise in International Financial Reporting Standards (IFRS). This certification ensures a deep understanding of IFRS principles and their effective application. Certified ACCA IFRS Accountants are experts in financial reporting and international accounting standards, playing a vital role in ensuring accurate financial reporting and global compliance...</p>
                     <div class="mt-10">
@@ -294,7 +294,7 @@
                     <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> DEC 31/2016</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci
                       eligendi! Sed nisi perferendis, totam harum dicta.</p>
