--- a/blog.html
+++ b/blog.html
@@ -192,7 +192,7 @@
                     <h5 class="font-16 title"><a href="#"> Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
                     <div class="mt-10">
@@ -214,7 +214,7 @@
                     <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
                     <div class="mt-10">
@@ -236,7 +236,7 @@
                     <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
                     <div class="mt-10">
@@ -258,7 +258,7 @@
                     <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
                     <div class="mt-10">
@@ -280,7 +280,7 @@
                     <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
                     <div class="mt-10">
@@ -302,7 +302,7 @@
                     <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> DEC 31/2023</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 Newyork City.</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
                     <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci eligendi! Sed nisi perferendis, totam harum dicta.</p>
                     <div class="mt-10">
