--- a/blog.html
+++ b/blog.html
@@ -133,7 +133,7 @@
                     <a href="about.html">About</a>
                   </li>
                   <li>
-                    <a href="#">career</a>
+                    <a href="404.html">career</a>
                   </li>
                   <li>
                     <a href="gallery.html">Gallery</a>
