--- a/Course.html
+++ b/Course.html
@@ -115,7 +115,7 @@
                   <a href="about.html">About</a>
                 </li>
                 <li>
-                  <a href="#">career</a>
+                  <a href="404.html">career</a>
                 </li>
                 <li>
                   <a href="gallery.html">Gallery</a>
