title description changed

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <meta name="description" content="LearnPress | Education & Courses HTML Template" />
-  <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
+  <meta name="description" content="prospire | Education & Institution" />
+  <meta name="keywords" content="academy, course, education, education, cma, learning," />
 
   <!-- Page Title -->
-  <title>LearnPress | Education & Courses HTML Template</title>
+  <title>prospire | Education & Institution</title>
 
   <!-- Favicon and Touch Icons -->
   <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
